# ScholarEvolve

./: .gitignore  README.md  pyproject.toml
backend-python/: requirements.txt
backend-python/app/: __init__.py  main.py
backend-python/app/config/: scoring.yaml  settings.py
backend-python/app/embeddings/: providers.py  service.py
backend-python/app/ingest/: arxiv.py  sources.py
backend-python/app/models/: schemas.py
backend-python/app/retrieval/: faiss_index.py
backend-python/app/services/: paper_store.py  recommendation.py  rust_core.py  state.py
core-rust/: Cargo.toml  pyproject.toml
core-rust/python/: __init__.py
core-rust/src/: lib.rs
docs/: architecture.md
scripts/: benchmark.py  evaluate.py  reindex.py
tests/integration/: test_api.py
tests/unit/: test_eval_metrics.py
