[package]
name = "scholarevolve-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "scholarevolve_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"
